# pks-openpgp-card

./: .gitlab-ci.yml  Cargo.toml  README.org  deny.toml  index.html
contrib/: pks-openpgp-card.service  pks-openpgp-card.socket
src/: main.rs
