[package]
name = "heiko-store"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14.13", features = ["full"] }
tokio = { version = "1", features = ["full"] }
openpgp-card-pcsc = "0.0.4"
openpgp-card = "0.0.4"
http = "0.2.5"
url = "2.2.2"
anyhow = "1"

