[package]
name = "pks-openpgp-card"
version = "0.1.0"
edition = "2018"
license = "LGPL-2.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14.13", features = ["full"] }
tokio = { version = "1", features = ["full"] }
openpgp-card-pcsc = "0.2"
openpgp-card = "0.2.1"
http = "0.2.5"
url = "2.2.2"
anyhow = "1"
hex = "0.4.3"
hyperlocal = "0.8"
sha2 = "0.9"
